# pubsub-ui

./: .gitignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  storage.py  uvx.json
src/: __init__.py  app.py  pubsub_client.py
src/pubsub_ui/: app.py
