[project]
name = "pubsub-ui"
version = "1.0.0"
description = "Streamlit UI for Google Cloud Pub/Sub emulator with AI features"
authors = [
    {name = "Dmitry", email = "dmitry@example.com"}
]
dependencies = [
    "streamlit",
    "google-cloud-pubsub",
    "transformers",
    "pandas",
    "plotly",
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/zmitry/pubsub-ui"
Repository = "https://github.com/zmitry/pubsub-ui.git"

[tool.setuptools]
py-modules = [
    "app",
    "pubsub_client",
    "storage",
    "message_analyzer"
]
