[project]
name = "pubsub-emulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "google-cloud-pubsub>=2.18.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
run = "streamlit run src/app.py"